--- a/index.html
+++ b/index.html
@@ -9,328 +9,69 @@
 	<link href="assets/css/style.css" rel="stylesheet">
 </head>
 <body>
-	<div id="grid">
-	
-			<div id="card">
-				<p>Wilson Cameron</p>
-				<p>Director and Cinematographer</p>
-				<p id="contact"><a href="mailto:hi@wilsoncameron.com">E-mail</a></p>
+	<div id="fullsite">
 
-				<div id="clientlist"> 
-					Clients Include ⇣
-					<ul class="clients"> 
-						<li>Glossier</li>
-						<li>Uniqlo</li>
-						<li>Theory</li>
-						<li>VSCO</li>
-						<li>Levis</li>
-						<li>Bloomberg</li>
-						<li>Art Basel</li>
-						<li>American Express</li>
-						<li>Warner Music</li>
-						<li>The Standard Hotels</li>
-					</ul>
+		<div id="intro">
+			<div id="container">
+			<div id="grid">
+				<div class="placement">
+					<svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+			 viewBox="0 0 4215.8 1324.3" style="enable-background:new 0 0 4215.8 1324.3;" xml:space="preserve">
+			<path d="M1535.5,291h177.8c0.5-6.8,0.5-14.6-0.6-21c-9.1-50.6-50.1-85.9-165.4-85.9c0,0-71.8-1.7-115.2,0
+			c-43.3,1.7-78.7,5.5-101,14.3c-45,17.7-68.2,53-68.2,107.7v30.8c0,74.6,44.2,121.9,171.3,121.9l113.8,0.2
+			c83.4,0,122-19.4,141.8-50.7c6.7-10.5,22.8-52.2,22.8-61.2H1535c-1.6,19.5-1.5,56.4-46.4,56.4c-25.7,0-41.3-15.8-43.8-43
+			c-1.9-20.7-1.6-33.7-1.6-46.1c0-41.6,9-75.7,52.2-75.7C1507.7,238.7,1535.5,241.8,1535.5,291z"/>
+			<path d="M3520.9,225.4c5.8-7.2,40.5-45.4,123.3-45.4c113.7,0,138,40.3,138,128.4v143.2h-182.7V303.3c0-24.2-13.5-43-41.6-43
+			s-39.6,25.2-39.6,49.5v141.9h-177.8V190.3h174.3l1.3,35.1H3520.9z"/>
+			<path d="M3160.9,182.9c0,0-83.3-1.7-126.7,0c-43.3,1.7-64.4,6.6-86.7,15.3c-45,17.7-65.9,60.4-65.9,107.7v30.8
+			c0,74.6,44.2,121.9,171.3,121.9l113.8,0.2c83.4,0,122-19.4,141.8-50.7c6.7-10.5,10.7-22.8,10.7-31.8h-177.5
+			c-1.6,19.5-13.6,27.6-38.2,27.6l0,0c-30,0-43.3-19.4-43.3-43.6v-11.2l245.2-0.1h19.9c0.2-3.9,0.3-8.4,0.3-12.3v-36.9
+			C3325.5,234.2,3275.9,182.9,3160.9,182.9z M3060.2,294.9v-11.1c0-24.2,16.3-49.5,43.3-49.5l0,0c24.2,0,43.7,19.8,43.7,44l0,16.5
+			H3060.2z"/>
+			<path d="M1996.8,182.9c0,0-83.3-1.7-126.7,0s-64.4,6.6-86.7,15.3c-45,17.7-65.9,60.4-65.9,107.7v30.8c0,74.6,44.2,121.9,171.3,121.9
+			l113.8,0.2c83.4,0,122-19.4,141.8-50.7c6.7-10.5,10.7-22.8,10.7-31.8h-177.5c-1.6,19.5-13.6,27.6-38.2,27.6h0
+			c-30,0-43.3-19.4-43.3-43.6v-11.2l245.2-0.1h19.9c0.2-3.9,0.3-8.4,0.3-12.3v-36.9C2161.4,234.2,2111.8,182.9,1996.8,182.9z
+			 M1896.1,294.9v-11.1c0-24.2,16.3-49.5,43.3-49.5h0c24.2,0,43.7,19.8,43.7,44l0,16.5H1896.1z"/>
+			<polygon points="4076.2,190.1 4015.9,190.1 4014.5,123.4 3838.1,123.4 3838.1,190.1 3779.7,190.1 3779.7,252.1 3838.1,252.1
+			3838.1,451.4 4016.7,451.4 4016.1,252.1 4076.2,252.1 "/>
+			<path d="M2359.6,227.3h-4.9l-1.2-37.6h-175.2v262.1h180.5V306.5c0-24.2,9.2-49.5,40.3-49.5c26.4,0,35.4,19.8,35.4,44l0,150.6h179
+			V306.5c0-24.2,9.2-49.5,40.3-49.5c26.4,0,35.4,19.8,35.4,44l0,150.6c0-0.8,182.6,0,182.6,0s0-166.3,0-179.6c0-16.2,0.6-51.4-31-71.8
+			c-31.7-20.5-68.3-22.9-83.2-22.9c-35.2,0-66.2,2.6-88.1,10.9c-43.5,16.5-60.4,38.9-60.4,38.9h-5.8c-4.5-10.1-12-19.2-23.9-27
+			c-31.7-20.5-67.6-20.3-82.5-20.3c-41.4,0-65.4,5.4-87.3,13.7C2385.2,203,2369.1,216.9,2359.6,227.3"/>
+			<path d="M1080.2,190.1l-0.3,37h-2c-12.2-15.7-28.4-25.5-44-31.4c-22.3-8.4-56.5-9.2-63.5-9.2c-10.9,0-15.5,0-15.5,0
+			c-133.2,0-130.9,98.4-130.9,136.9c0,42.8,3.5,135.5,130.9,135.5c0,0,4.6,0,15.5,0l-26.2-0.5l27.8,0.2c75.3,0,106-40.6,106-40.6h3.1
+			l0.8,33.4h171.1V190.1H1080.2z M1083.7,333.5c0,29.6-16.2,53.7-43.1,53.7c-27,0-43.1-24-43.1-53.7V312c0-29.6,16.2-53.7,43.1-53.7
+			c27,0,43.1,24,43.1,53.7V333.5z"/>
+			<rect x="628.2" y="90.1" width="180.7" height="361.3"/>
+			<path d="M463.5,89.2l-155.4,0.4H103.5v360.6h204.6V329.8h162.7c96,0,139.7-44.5,139.7-111.6v-16.3
+			C610.5,128.9,564.9,89.2,463.5,89.2z M410.8,209c0,26.2-19.6,46.2-43.7,46.2h-59v-93.3h59C391.3,161.9,410.8,182.9,410.8,209
+			L410.8,209z"/>
+			</g>
+			</svg>
 				</div>
 
+<div class="studio">
+			<div class="studio1">
+
+
+				<p>A creative studio for film and video.<p>
 			</div>
-
-
-			<div id="reel">
-				<div class="movie large">
-						<iframe src="https://player.vimeo.com/video/325570156"  frameborder="0" width="100%" height="200px"></iframe>
-				</div>
-				<div class="indent-ital"><p>Reel 2019</p></div>
-				<div class="desc">
-					<p>Wilson Cameron is a filmmaker based in New York. He works on narrative, commercial and documentary films.<p>
-				</div>
+			<div class="studio2">
+				<p>Contact: hi@wilsoncameron.com<p>
 			</div>
-
-
-
-
-
-				<div class="indent-ital selected-works"><p>Selected Works</p></div>
-<!-- INDIV PROJ START HERE -->
-				<div id="" class="project small">
-						<div class="movie">
-							<iframe src="https://player.vimeo.com/video/325565290"  frameborder="0" width="100%" height="200px"></iframe>
-						</div>
-						<div class="role">
-							<p>Director, Cinematographer</p>
-						</div>
-						<div class="indent-ital"><p>Glossier — Complexion</p></div>
-							<div class="desc">
-								<p>
-									Campaign for Glossier’s relaunched ‘Stretch Concealer’ and ‘Perfecting Skin Tint‘ products.	
-								</p>
-							</div>
-				</div>	
-<!-- INDIV PROJ END HERE -->
-<!-- INDIV PROJ START HERE -->
-				<div id="" class="project medium">
-						<div class="movie">
-							<iframe src="https://player.vimeo.com/video/297834914"  frameborder="0" width="100%" height="200px"></iframe>
-						</div>
-						<div class="role">
-							<p>Director, Cinematographer</p>
-						</div>
-						<div class="indent-ital"><p>Theory — Festive 2018</p></div>
-							<div class="desc">
-								<p>
-									Landing page film for Theory's Fall Collection. 
-								</p>
-							</div>
-				</div>	
-<!-- INDIV PROJ END HERE -->
-		<!-- INDIV PROJ START HERE -->
-				<div id="" class="project small">
-						<div class="movie">
-							<iframe src="https://player.vimeo.com/video/328305041?background=1"  frameborder="0" width="100%" height="200px"></iframe>
-						</div>
-						<div class="role">
-							<p>Cinematographer (segments)</p>
-						</div>
-						<div class="indent-ital"><p>Red Film — Directed by Sara Cwynar</p></div>
-							<div class="desc">
-								<p>
-									Cinematographer for various segments of Sara Cwynar’s new film, shot on Super 16mm. Premiered at International Film Festival Rotterdam 2019.  
-								</p>
-							</div>
-				</div>	
-<!-- INDIV PROJ END HERE -->
-<!-- INDIV PROJ START HERE -->
-				<div id="" class="project x-large">
-						<div class="movie">
-							<iframe src="https://player.vimeo.com/video/259055815"  frameborder="0" width="100%" height="200px"></iframe>
-						</div>
-						<div class="role">
-							<p>Director, Cinematographer</p>
-						</div>
-						<div class="indent-ital"><p>Warner Music — Level</p></div>
-							<div class="desc">
-								<p>
-									Digital campaign to launch Warner Music’s artist service.	
-								</p>
-							</div>
-				</div>	
-<!-- INDIV PROJ END HERE -->
-<!-- INDIV PROJ START HERE -->
-				<div id="" class="project medium">
-						<div class="movie">
-							<iframe src="https://player.vimeo.com/video/326204170?background=1"  frameborder="0" width="100%" height="200px"></iframe>
-						</div>
-						<div class="role">
-							<p>Cinematographer</p>
-						</div>
-						<div class="indent-ital"><p>Hannahs — Directed by India Donaldson</p></div>
-							<div class="desc">
-								<p>
-									Narrative short, Super 16mm, premiering at Maryland Film Festival 2019. 
-								</p>
-							</div>
-				</div>	
-<!-- INDIV PROJ END HERE -->
-<!-- INDIV PROJ START HERE -->
-				<div id="" class="project small">
-						<div class="movie">
-							<iframe src="https://player.vimeo.com/video/297827740"  frameborder="0" width="100%" height="200px"></iframe>
-						</div>
-						<div class="role">
-							<p>Director, Cinematographer</p>
-						</div>
-						<div class="indent-ital"><p>Theory — 2.0 Fall</p></div>
-							<div class="desc">
-								<p>
-									Fall campaign for Theory’s specialty capsule collection. 
-								</p>
-							</div>
-				</div>	
-<!-- INDIV PROJ END HERE -->
-<!-- INDIV PROJ START HERE -->
-				<div id="" class="project medium">
-						<div class="movie">
-							<iframe src="https://player.vimeo.com/video/325786161?background=1"  frameborder="0" width="100%" height="200px"></iframe>
-						</div>
-						<div class="role">
-							<p>Director, Cinematographer</p>
-						</div>
-						<div class="indent-ital"><p>Glossier — Solution and Super Bounce</p></div>
-							<div class="desc">
-								<p>
-									Campaign for Glossier’s skincare products.
-								</p>
-							</div>
-				</div>	
-<!-- INDIV PROJ END HERE -->
-<!-- INDIV PROJ START HERE -->
-				<div id="" class="project small">
-						<div class="movie">
-							<iframe src="https://player.vimeo.com/video/325784508?background=1"  frameborder="0" width="100%" height="200px"></iframe>
-						</div>
-						<div class="role">
-							<p>Director, Cinematographer</p>
-						</div>
-						<div class="indent-ital"><p>Scenes from the Studio — Martine Syms</p></div>
-							<div class="desc">
-								<p>
-									<!-- (↗ <a href="http://scenesfromthestudio.com/artists/martinesyms.html" about="_blank">Video</a>) --> A visit to the installation of contemporary artist Martine Syms’s first New York solo show. Part of the self-created <a href="http://scenesfromthestudio.com/" target="_blank">documentary series</a> made in collaboration with artist Robin Cameron. 
-								</p>
-							</div>
-				</div>	
-<!-- INDIV PROJ END HERE -->
-<!-- INDIV PROJ START HERE -->
-				<div id="" class="project medium">
-						<div class="movie">
-							<iframe src="https://player.vimeo.com/video/211300166"  frameborder="0" width="100%" height="200px"></iframe>
-						</div>
-						<div class="role">
-							<p>Director, Cinematographer</p>
-						</div>
-						<div class="indent-ital"><p>Standard Hotel and Art News — Eric Mack</p></div>
-							<div class="desc">
-								<p>
-									A visit to the studio of emerging artist Eric Mack, in this installment of a multi-part series on artists and their spaces. 
-								</p>
-							</div>
-				</div>	
-<!-- INDIV PROJ END HERE -->
-	<!-- INDIV PROJ START HERE -->
-				<div id="" class="project large">
-						<div class="movie">
-							<iframe src="https://player.vimeo.com/video/328659820?background=1"  frameborder="0" width="100%" height="200px"></iframe>
-						</div>
-						<div class="role">
-							<p>Cinematographer</p>
-						</div>
-						<div class="indent-ital"><p>Medusa — Directed by India Donaldson</p></div>
-							<div class="desc">
-								<p>
-									Narrative Short. Screened 2018 at various festivals in the US.	
-								</p>
-							</div>
-				</div>	
-<!-- INDIV PROJ END HERE -->
-		<!-- INDIV PROJ START HERE -->
-				<div id="" class="project medium">
-						<div class="movie">
-							<iframe src="https://player.vimeo.com/video/297834836"  frameborder="0" width="100%" height="200px"></iframe>
-						</div>
-						<div class="role">
-							<p>Director, Cinematographer</p>
-						</div>
-						<div class="indent-ital"><p>Glossier — Zit Stick</p></div>
-							<div class="desc">
-								<p>
-									Launch campaign for Glossier’s new ‘Zit Stick’ product.	
-								</p>
-							</div>
-				</div>	
-<!-- INDIV PROJ END HERE -->
-<!-- INDIV PROJ START HERE -->
-				<div id="" class="project small">
-						<div class="movie">
-							<iframe src="https://player.vimeo.com/video/249100765"  frameborder="0" width="100%" height="200px"></iframe>
-						</div>
-						<div class="role">
-							<p>Director, Cinematographer</p>
-						</div>
-						<div class="indent-ital"><p>Levis x Google — Jeff Staple</p></div>
-							<div class="desc">
-								<p>
-									A film that follows Jeff Staple as he crafts a custom embroidery for a new Google and Levis product.	
-								</p>
-							</div>
-				</div>	
-<!-- INDIV PROJ END HERE -->
-<!-- INDIV PROJ START HERE -->
-				<div id="" class="project large">
-						<div class="movie">
-							<iframe src="https://player.vimeo.com/video/297833567"  frameborder="0" width="100%" height="200px"></iframe>
-						</div>
-						<div class="role">
-							<p>Director, Cinematographer</p>
-						</div>
-						<div class="indent-ital"><p>Glossier — Cloud Paint</p></div>
-							<div class="desc">
-								<p>
-									Campaign to highlight the multiple shades in Glossier’s ‘Cloud Paint’ product line.	
-								</p>
-							</div>
-				</div>	
-<!-- INDIV PROJ END HERE -->
-<!-- INDIV PROJ START HERE -->
-				<div id="" class="project small">
-						<div class="movie">
-							<iframe src="https://player.vimeo.com/video/297830496"  frameborder="0" width="100%" height="200px"></iframe>
-						</div>
-						<div class="role">
-							<p>Director, Cinematographer</p>
-						</div>
-						<div class="indent-ital"><p>Glossier — Boy Brow + Haloscope</p></div>
-							<div class="desc">
-								<p>
-									Social campaign for Glossier’s popular product lines.	
-								</p>
-							</div>
-				</div>	
-<!-- INDIV PROJ END HERE -->
-<!-- INDIV PROJ START HERE -->
-				<div id="" class="project x-large">
-						<div class="movie">
-							<iframe src="https://player.vimeo.com/video/187403968"  frameborder="0" width="100%" height="200px"></iframe>
-						</div>
-						<div class="role">
-							<p>Director, Cinematographer</p>
-						</div>
-						<div class="indent-ital"><p>Uniqlo — Jason Polan</p></div>
-							<div class="desc">
-								<p>
-									A film that takes you to artist Jason Polan’s favorite places to draw people in New York, as part of his collaboration with Uniqlo on a T-shirt line.
-								</p>
-							</div>
-				</div>	
-<!-- INDIV PROJ END HERE -->
-<!-- INDIV PROJ START HERE -->
-				<div id="" class="project small">
-						<div class="movie">
-							<iframe src="https://player.vimeo.com/video/326200480?background=1"  frameborder="0" width="100%" height="200px"></iframe>
-						</div>
-						<div class="role">
-							<p>Director, Cinematographer</p>
-						</div>
-						<div class="indent-ital"><p>Scenes from the Studio — Maia Ruth Lee</p></div>
-							<div class="desc">
-								<p>
-									A visit to the studio of Maia Ruth Lee, as she creates work in advance of her first solo show. Part of the self-created <a href="http://scenesfromthestudio.com/" target="_blank">documentary series</a> made in collaboration with artist Robin Cameron. 
-								</p>
-							</div>
-				</div>	
-<!-- INDIV PROJ END HERE -->
-<!-- INDIV PROJ START HERE -->
-				<div id="" class="project medium">
-						<div class="movie">
-							<iframe src="https://player.vimeo.com/video/328311489"  frameborder="0" width="100%" height="200px"></iframe>
-						</div>
-						<div class="role">
-							<p>Director, Cinematographer</p>
-						</div>
-						<div class="indent-ital"><p>VSCO: Renato D’Agostin — 7439 </p></div>
-							<div class="desc">
-								<p>
-								Documentary portrait of Italian photographer Renato D’Agostin for VSCO. This film focuces on his book project titled “7439” — a body of work he created on a motorcycle trip across the country. 
-								</p>
-							</div>
-				</div>	
-<!-- INDIV PROJ END HERE -->
-
-
-
+				</div>
 	</div>
 
-		<script src="assets/js/jquery-3.3.1.min.js"></script>
+	<div class="reel">
+		<iframe src="https://player.vimeo.com/video/464353782?autoplay=1&loop=1&autopause=0&muted=1"  frameborder="0" width="100%" height="400px"></iframe>
+	</div>
+		</div>
 
-<script src="assets/js/script.js"></script>
-<script src="assets/js/preload.js"></script>
-</body>
+	</div>
+			<div id="launch">
+		<p>(site launching soon)<p>
+				</div>
+	</div>
 
-</html>
+	</body>
+	</html>
