--- a/index0.html
+++ b/index0.html
@@ -63,7 +63,87 @@
 			</div >-->
 
 		</div>
-	
+	<div class="sections" id="what">
+		<div class="layer poster">
+			<p class="bigtxt"> We create films and videos. From ideation, to execution, to delivery — and everything in between. </p>
+		</div>
+	</div>
+
+	<div class="sections" id="offer">
+		<div class="layer">
+
+			<div class="slider">
+				<ul>
+			    <li>
+						<p class="medtxt topleft"> We offer a full range of creative services, including direction, cinematography, editing, animation, and color:</p>
+						<img src="assets/img/offer/offer2.png">
+						<p> Direction, Cinematography</p>
+					</li>
+					<li class="bottom-align">
+						<img src="assets/img/offer/offer1.png">
+						<p class="slidedescript"> test</p>
+					</li>
+					<li>
+						<img src="assets/img/offer/offer3.png">
+						<p class="slidedescript"> test</p>
+					</li>
+					<li class="top-align">
+						<img src="assets/img/offer/offer4.png">
+						<p class="slidedescript"> test</p>
+					</li>
+
+					</ul>
+				</div>
+			</div>
+		</div>
+
+
+		<div class="sections" id="collaborate">
+			<div class="layer poster">
+				<p class="bigtxt"> We collaborate with in-house creative and agencies to help realize projects from pre-production to delivery.</p>
+			</div>
+		</div>
+
+		<div class="sections" id="specialize">
+			<div class="layer">
+				<div class="slider">
+				<ul>
+				 <li class="bottom-align">
+					 	<p class="medtxt topleft"> We specialize in a wide range of mediums and content:</p>
+						<img src="assets/img/specialize/specialize2.png">
+						<p> Direction, Cinematography</p>
+					</li>
+					<li class="top-align">
+						<img src="assets/img/specialize/specialize1.png">
+						<p> test</p>
+					</li>
+					<li>
+						<img src="assets/img/specialize/specialize3.png">
+						<p> test</p>
+					</li>
+					<li>
+						<img src="assets/img/specialize/specialize4.png">
+						<p> test</p>
+					</li>
+				</ul>
+				</div>
+			</div>
+		</div>
+
+		<div class="sections" id="clients">
+			<div class="layer">
+				<!-- <div class="topleft"> -->
+					<p class="medtxt topleft"> Some clients we’ve worked with:</p>
+				</div>
+			</div>
+
+
+		<div class="sections" id="about">
+			<div class="layer">
+			<p> Placement was founded in 2016 by Director/DP Wilson Cameron</p>
+			</div>
+		</div>
+
 
 </div>
 </body>
