--- a/index.html
+++ b/index.html
@@ -57,13 +57,13 @@
 					</div>
 				</div>
 			</div>
-			<iframe src="https://player.vimeo.com/video/464353782?autoplay=1&loop=1&autopause=0&muted=1"  frameborder="0" width="100%" height="400px"></iframe>
+			<iframe src="https://player.vimeo.com/video/464353782?background=1"  frameborder="0" width="100%" height="400px"></iframe>
 			<!--	<div id="reel">
 				<iframe src="https://player.vimeo.com/video/464353782?autoplay=1&loop=1&autopause=0&muted=1"  frameborder="0" width="100%" height="400px"></iframe>
 			</div >-->
 
 		</div>
-	
+
 
 </div>
 </body>
