update ny again

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 						<p>A creative studio for film and video.</p>
 					</div>
 					<div class="studio2">
-						<p>Based in New York. hi@placement.studio</p>
+						<p>Based in NYC. hi@placement.studio</p>
 					</div>
 				</div>
 			</div>
