--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
 				<div class="studio">
 					<div class="studio1">
-						<p>A creative studio for film and video.</p>
+						<p>Creative and post-production services for film and video.</p>
 					</div>
 					<div class="studio2">
 						<p>Based in NYC. hi@placement.studio</p>
