--- a/index.html
+++ b/index.html
@@ -50,10 +50,10 @@
 
 				<div class="studio">
 					<div class="studio1">
-						<p>Creative and post-production services for film and video.</p>
+						<p>Creative and post for film and video.</p>
 					</div>
 					<div class="studio2">
-						<p>Based in NYC. hi@placement.studio</p>
+						<p>Based in NYC. hi@placement.studio </p>
 					</div>
 				</div>
 			</div>
