--- a/index0.html
+++ b/index0.html
@@ -50,7 +50,7 @@
 
 				<div class="studio">
 					<div class="studio1">
-						<p>A creative studio for film and video.</p>
+						<p>Creative services for film and video.</p>
 					</div>
 					<div class="studio2">
 						<p>Based in NYC. hi@placement.studio</p>
@@ -76,20 +76,29 @@
 				<ul>
 			    <li>
 						<p class="medtxt topleft"> We offer a full range of creative services, including direction, cinematography, editing, animation, and color:</p>
-						<img src="assets/img/offer/offer2.png">
-						<p> Direction, Cinematography</p>
+
+				<iframe src="https://player.vimeo.com/video/488689223?autoplay=1&loop=1&autopause=0&muted=1"  frameborder="0" width="100%" height="200px"></iframe>
+						<p> Glossier Skywash — Direction, Cinematography, Post </p>
 					</li>
-					<li class="bottom-align">
-						<img src="assets/img/offer/offer1.png">
-						<p class="slidedescript"> test</p>
-					</li>
-					<li>
-						<img src="assets/img/offer/offer3.png">
-						<p class="slidedescript"> test</p>
-					</li>
+
 					<li class="top-align">
-						<img src="assets/img/offer/offer4.png">
-						<p class="slidedescript"> test</p>
+						<div>	<img src="assets/img/s3/s2_everlane.png"> </div>
+						<p class="slidedescript"> Everlane, Various Projects — Direction, Cinematography, Post</p>
+					</li>
+
+					<li class="bottom-align">
+							<iframe src="https://player.vimeo.com/video/488689507?autoplay=1&loop=1&autopause=0&muted=1"  frameborder="0" width="100%" height="200px"></iframe>
+						<p class="slidedescript"> Billie — Direction, Cinematography</p>
+					</li>
+
+					<li class="top-align">
+							<div>	<img src="assets/img/s3/s2_theory.png"> </div>
+						<p class="slidedescript"> Theory — Direction, Cinematography, Post </p>
+					</li>
+
+					<li class="bottom-align">
+						<iframe src="https://player.vimeo.com/video/488689649?autoplay=1&loop=1&autopause=0&muted=1"  frameborder="0" width="100%" height="200px"></iframe>
+						<p class="slidedescript"> W Mag: Anna Sui — Post </p>
 					</li>
 
 					</ul>
@@ -110,20 +119,30 @@
 				<ul>
 				 <li class="bottom-align">
 					 	<p class="medtxt topleft"> We specialize in a wide range of mediums and content:</p>
-						<img src="assets/img/specialize/specialize2.png">
-						<p> Direction, Cinematography</p>
+						<iframe src="https://player.vimeo.com/video/341696998?autoplay=1&loop=1&autopause=0&muted=1"  frameborder="0" width="100%" height="200px"></iframe>
+						<p> Campaign films</p>
+
 					</li>
 					<li class="top-align">
-						<img src="assets/img/specialize/specialize1.png">
-						<p> test</p>
+											<div>	<img src="assets/img/s5/s5_basel.png"> </div>
+						<!--		<iframe src="https://player.vimeo.com/video/488689676?autoplay=1&loop=1&autopause=0&muted=1"  frameborder="0" width="100%" height="200px"></iframe> -->
+						<p class="slidedescript"> Short-Form Documentary</p>
 					</li>
-					<li>
-						<img src="assets/img/specialize/specialize3.png">
-						<p> test</p>
+
+					<li class="bottom-align">
+							<iframe src="https://player.vimeo.com/video/488689709?autoplay=1&loop=1&autopause=0&muted=1"  frameborder="0" width="100%" height="200px"></iframe>
+						<p class="slidedescript"> Campaign films </p>
 					</li>
-					<li>
-						<img src="assets/img/specialize/specialize4.png">
-						<p> test</p>
+
+					<li class="top-align">
+								<div>	<img src="assets/img/s5/s5_uniqlo.png"> </div>
+			<!--		<iframe src="https://player.vimeo.com/video/488689733?autoplay=1&loop=1&autopause=0&muted=1"  frameborder="0" width="100%" height="200px"></iframe> -->
+						<p class="slidedescript"> Social Campaigns  </p>
+					</li>
+
+					<li class="bottom-align">
+						<iframe src="https://player.vimeo.com/video/488689737?autoplay=1&loop=1&autopause=0&muted=1"  frameborder="0" width="100%" height="200px"></iframe>
+						<p class="slidedescript"> YouTube/Editorial Content </p>
 					</li>
 				</ul>
 				</div>
@@ -134,8 +153,26 @@
 			<div class="layer">
 				<!-- <div class="topleft"> -->
 					<p class="medtxt topleft"> Some clients we’ve worked with:</p>
+							</div>
+					<div class="clientgrid">
+					<div>	<img src= "assets/img/logo/glossier.png">	</div>
+					<div>	<img src= "assets/img/logo/uniqlo.png">	</div>
+						<div>	<img src= "assets/img/logo/everlane.png">	</div>
+						<div>	<img src= "assets/img/logo/billie.png">	</div>
+						<div>	<img src= "assets/img/logo/theory.png">	</div>
+						<div>	<img src= "assets/img/logo/nyt.png">	</div>
+						<div>	<img src= "assets/img/logo/levis.png">	</div>
+						<div>	<img src= "assets/img/logo/vsco.png">	</div>
+						<div>	<img src= "assets/img/logo/w.png">	</div>
+						<div>	<img src= "assets/img/logo/warner.png">	</div>
+						<div> <img src= "assets/img/logo/whitney.png">	</div>
+						<div>	<img src= "assets/img/logo/basel.png">	</div>
+						<div>	<img src= "assets/img/logo/amex.png">	</div>
+						<div>	<img src= "assets/img/logo/standard.png">	</div>
+							</div>
+
 				</div>
-			</div>
+
 
 
 		<div class="sections" id="about">
