--- a/index.html
+++ b/index.html
@@ -207,6 +207,12 @@
 				<a href="https://player.vimeo.com/video/409080322" target="_blank" rel="noopener noreferrer"> 2020 // Everlane: 10 Questions in an Organic Tee — Direction/DP/Post <span><img src="assets/hover/e_gots.png" alt="image" height="300" /></span></a>
 			</div>
 			<div class="links">
+				<a href="https://player.vimeo.com/video/500900827" target="_blank" rel="noopener noreferrer"> 2020 // VSCO: Q4 Social Campaign — Animation/Post <span><img src="assets/hover/vsco.png" alt="image" height="300" /></span></a>
+			</div>
+			<div class="links">
+				<a href="https://player.vimeo.com/video/500898554" target="_blank" rel="noopener noreferrer"> 2020 // W Magazine: Anna Sui — Edit/Post <span><img src="assets/hover/wmag_a.png" alt="image" height="300" /></span></a>
+			</div>
+			<div class="links">
 				<a href="https://player.vimeo.com/video/372225341" target="_blank" rel="noopener noreferrer"> 2019 // NYT: Rimowa  — DP (excerpt)  <span><img src="assets/hover/nyt_r.png" alt="image" height="300" /></span></a>
 			</div>
 			<div class="links">
