--- a/index.html
+++ b/index.html
@@ -108,9 +108,9 @@
 
 					<li class="top-align">
 							<div class="movie">
-								<iframe src ="https://player.vimeo.com/video/501922654?background=1"  frameborder="0" width="100%" height="200px"></iframe>
+								<iframe class="nine-sixteen" src ="https://player.vimeo.com/video/501922654?background=1"  frameborder="0" width="100%" height="200px"></iframe>
 							</div>
-						<p class="vertslidedescript"> VSCO — Post, Motion Graphics </p>
+						<p> VSCO — Post, Motion Graphics </p>
 					</li>
 
 					</ul>
@@ -198,7 +198,7 @@
 		<div class="sections" id="about">
 			<div class="layer">
 				<div id="bio">
-			<p> Founded in 2016 by filmmaker Wilson Cameron, Placement is a film and video studio with a focus on collaborative, creative process. We love to work with clients to help them tell their stories — from new brands that have never worked in video, to companies that have done it all and need reliable, skillful delivery of assets.  We believe in applying fundamental filmmaking principles to all of the work that we do, whether a product video, documentary, or a narrative piece. We are currently booking for post-production, color, and motion graphics projects. Get in touch and let's make something fun. ✌️  </p>
+			<p> Founded in 2016 by filmmaker Wilson Cameron, Placement is a film and video studio with a focus on collaborative, creative process. We love to work with clients to help them tell their stories — from new brands that have never worked in video, to companies that have done it all and need reliable, skillful delivery of assets.  We believe in applying fundamental filmmaking principles to all of the work that we do, whether a product video, documentary, or a narrative piece. We are currently booking post-production, color, and motion graphics projects. Get in touch and let's make something fun. ✌️  </p>
 			</div>
 				</div>
 		</div>
